css/style.css
/* Overpass */

@import url('https://fonts.googleapis.com/css2?family=Overpass:ital,wght@0,100;0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap');
/*@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');*/


:root{
    /* #ffc400 */
    --primary:#fcba04;
    --primarydark:#ff9800;
    --secondary:#d3d3d3;
    --secondary-soft:#ffffff70;
    --primaryBg:#001a22;
    --sideBg1:#021c20;
    --sideBg2:#006064;
    --sideBg3:#0060648c;
    --sideBg4:#048b985c;
    --sideBg5:#001112;
    --preview:#fcba04;
    --mb-active:#fcba04;


}

*{
    font-family:'Archivo Black','Overpass', sans-serif;
    /* font-family: 'Poppins', sans-serif; */
    /* font-family:'Overpass', sans-serif; */
    color: white;
    box-sizing: border-box;
    scroll-behavior: smooth;
}
body{
    /* background-color: rgb(15, 15, 15); */
    background-color: #0e1538;
    background-color: #0e2738;
    /* background-color: #330e38; */
    /* background-image: linear-gradient(to top, #3c0958, #2d1457, #1e1a53, #0f1d4e, #031e47, #00254b, #002b4e, #003150, #00405f, #004f6d, #005e7a, #006e86); */
    /* background-image: linear-gradient(to left, #000008, #432541, #9a3b57, #e36745, #fbb300); */
    background-image: linear-gradient(to right bottom, #000008, #030003, var(--primaryBg),#030003);
    /* background-image: linear-gradient(to right bottom, #000008, #030003, var(--primary),#030003); */

    background-position: center;
    background-attachment: fixed;
    overflow-x: hidden;
    

}
.ss{
    color: var(--primary) !important;
}
.header .icon-menu .active{
    background-color:var(--primary) !important;
    
}

/* .btn:focus{
background-color: #dfab00;
} */
a{
    text-decoration: none;
}
.hr{
    background-color: #ffffff25;
    height: 0.5px;
    width: 40%;
    /* border-radius: 2%; */
    display: flex;
    margin: auto;
}

.color-block{
    background-color: var(--primary);
    position: fixed;
    height: 200%;
    width: 100%;
    transform: rotate(-15deg);
    left: -83%;
    top: -50%;
    z-index: 1;

}
.home{
    /* height: 100vh; */
   
}

.homeLeft{
    position: relative;
    box-sizing: border-box;
}
.win{
    color: var(--primary) !important;
}
.btn-outline-warning{
    border-color: var(--primary) !important;
}
.homeRight>div>p{
    font-family: 'Overpass', sans-serif;
    line-height: 30px;
}
.sup{
    visibility: visible;
}
.main-img-mobile{
    border-radius: 50%;
    width: 230px;
    border: 2px solid var(--primary);
    margin-bottom: 20px;
}
.home-img{
    height: 100%;
    width: 100%;
    object-fit:fill;
    border-radius: 25px;
    /* position: absolute;
    top: 5%;
    left: 10%; */
    /* transform: translate(10%, 5%); */
    /* height: 90vh; */
    /* border-radius: 25px; */
    /* box-shadow: 0 .5rem 1rem rgba(0, 0, 0, 0.774) !important;
    z-index: 2;
    transition: 1s; */
}
.flip-box {
    background-color: transparent;
    width: 74%;
    height: 90vh;
    perspective: 2000px;
    display: inline-block;
    position: absolute;
    top: 4%;
    left: 10%;
    z-index: 100;
    box-sizing: border-box;
    border-radius: 25px;
    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, 0.774) !important;
  }
  .flip-box-inner {
    position: relative;
    width: 100%;
    height: 100%;
    text-align: center;
    transition: transform 0.8s;
    transform-style: preserve-3d;

  }
  .flip-box:hover .flip-box-inner {
    transform: rotateY(180deg);
  }
  .flip-box-front, .flip-box-back {
    position: absolute;
    width: 100%;
    height: 100%;
    -webkit-backface-visibility: visible;
    backface-visibility:visible;
    border-radius: 25px;
    transition: all .4s;

  }
  .flip-box-front {
    background-color: transparent;
    color: black;
  }
  .flip-box-back {
    /* background-color: var(--sideBg2); */
    background-image: linear-gradient(45deg, var(--primarydark),var(--sideBg3), var(--sideBg4),var(--sideBg3),var(--primarydark));
    backdrop-filter: blur(5px);
    transform: rotateY(180deg);
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
  }
  .flip-box-back .wayiy{
      display: block;
  }
  .flip-box-back span{
    font-family:'Archivo Black','Overpass', sans-serif;
    font-weight: bolder;
    position: relative;
    display: inline-block;
    color: #fff;
    animation: waviy 1.3s infinite;
    animation-delay: calc(.3s * var(--i));
    margin: 1px;
  }
  @keyframes waviy {
    0%,40%,100% {
      transform: translateY(0);
      color: blue;
    }
    10% {
        color: #8e44ad;
      }
    20% {
      transform: translateY(-20px);
      color: #1abc9c;

    }
    30% {
        color: #d35400;
      }
      50% {
        color: #34495e;
      }
      60% {
        color: #e74c3c;
      }
      70% {
        color: #2980b9;
      }
      80% {
        color: #f1c40f;
      }
      90% {
        color: #2980b9;
      }
  }
.MYtext{
    /* text-align: center; */
    font-weight: lighter !important;
    color: #b8b8b8;
}
.homeBtn{
    position: relative;
}
.homeBtn::before{
    transition: all 0.4s ; /*cubic-bezier(0.68, -0.55, 0.265, 1.55)*/
		content: '';
		width: 100%;
		height: 100%;
		position: absolute;
		top: 0;
		right: 0;
}
.text-light{
    mix-blend-mode:lighten;
}
.roundedBtn::before{
    border-radius: 50px;
    width: 0%;
    background: var(--primary);
    filter: blur(10px);
}
.roundedBtn:hover::before{
    background: var(--primary) !important;
    filter: blur(10px);
        width: 100% !important;
    } 
.btn-outline-warning:hover{
    color: #000;
    background-color: transparent !important;
    border-color: #ffc107;
}
.btn-outline-warning:focus{
    box-shadow: none;
}

.ani-delay-1{
    animation-delay: 0.5s;
}
.ani-delay-1-1{
    animation-delay: 0.9s;
}
.ani-delay-2{
    animation-delay: 1s;
}
.ani-delay-3{
    animation-delay: 1.5s;
}
.ani-delay-4{
    animation-delay: 2s;
}
.ani-delay-5{
    animation-delay: 2.5s;
}
.ani-delay-6{
    animation-delay: 3s;
}
.ani-delay-7{
    animation-delay: 3.5s;
}
.ani-delay-8{
    animation-delay: 4s;
}
.ani-delay-9{
    animation-delay: 4.5s;
}
.ani-delay-10{
    animation-delay: 5s;
}
.ani-delay-11{
    animation-delay: 5.5s;
}

/* custom scrollbar start */

::-webkit-scrollbar{
    width: 0;
}
#scrollPath{
    position: fixed;
    top: 0;
    right: 0;
    width: 5px;
    height: 100%;
    background: rgba(255,255,255,0.05);
}
#progressbar{
    position: fixed;
    top: 0;
    right: 0;
    width: 5px;
    background: linear-gradient(to top,#008aff,#00ffe7);
    animation: scrollbarAnimate 5s linear infinite;
}
@keyframes scrollbarAnimate {
    0%,100%{
        filter: hue-rotate(0deg);
    }
    50%{
        filter: hue-rotate(360deg);
    }
}
#progressbar::before{
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    width: 10px;
    height: 100%;
    background: linear-gradient(to top,#008aff,#00ffe7);
    filter: blur(10px);
}
#progressbar::after{
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    width: 10px;
    height: 100%;
    background: linear-gradient(to top,#008aff,#00ffe7);
    filter: blur(30px);
}
/* scroll bar end */

/* device View */
/*  X-Small devices (portrait phones, less than 576px)
 No media query for `xs` since this is the default in Bootstrap */

 /* Small devices (landscape phones, 576px and up) */
@media (min-width: 372px) and (max-width:760px) { 
    .aboutSection, .portfolioSection, .contactSection, .blogSection{
        padding: 30px 0px 10px 0px;
        position: relative;
        top: 54px;
        overflow-x: hidden;
    }
    .pageHeading{
        display: none !important;
    }
    .homeLeft{
        display: none !important;
    }
    .main-img-mobile{
        display: none !important;
        width: 145px !important;
    }
    .homeRight{
        display: flex;
        justify-content: center;
        align-items: center;
    }
    .homeRight>div{
        display: flex;
        justify-content: center;
        align-items: center;
        flex-direction: column;
        width: 100% !important;
    }  
    .sup{
        visibility: hidden;
    }
    .MYtext{
        text-align: center;
        font-weight: lighter !important;
        color: #c6c4c4;
    }

 }

/* // Medium devices (tablets, 768px and up) ipad landscape md*/
@media screen and (min-width: 768px) and (max-width: 992px){ 
    .aboutSection, .portfolioSection, .contactSection, .blogSection{
        margin-top: 54px;
    }
    .homeSection{
        position: fixed;
        top: 0px;
    }
    .pageHeading{
        display: block !important;
    }
    .homeLeft{
        display: none !important;
    }
    .homeRight{
        display: flex;
        justify-content: center;
        align-items: center;
    }
    .homeRight>div{
        display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    }  
    .sup{
        visibility: hidden;
    }
    .MYtext{
        text-align: center;
        color: #c6c4c4;
    }
    .main-img-mobile{
        border: 2px solid var(--primary) !important;
    }
 }

/* // Large devices (desktops, 992px and up) ipad col-lg-*/
@media (min-width: 992px) and (max-width:1299px){ 
        .home-img{
            /* height: 75vh; */
            /* top: 13%;
            left: 10%; */
            /* transform: translate(-50%, -50%); */
        }
        .flip-box {
            height: 75vh;
            top: 13%;
            left: 10%;
        }
 }

/* // X-Large devices (large desktops, 1200px and up) */
@media (min-width: 1200px) { 

 }

/* // XX-Large devices (larger desktops, 1400px and up) laptop*/
@media (min-width: 1400px) { 

 }

